---------------------------------------------------------------------------------------------------
Version: 0.1.28
Date: ????
  Changes:
    - Ordered settings rather than random
    - Support for quality on friendly units
  Bug fixes
    - Support "no quality" on armors
    - Support "no quality" on quality enhancing buildings
---------------------------------------------------------------------------------------------------
Version: 0.1.27
Date: 2024-01-27
  Changes:
    - Reduce number of recipes created
---------------------------------------------------------------------------------------------------
Version: 0.1.26
Date: 2024-01-23
  Changes:
    - Delevelers now default to reducing non-science pack items by one level. Added setting to control this.
    - Changed deleveler color to better fit the building
    - New calculation of quality module bonuses (supports quality bonus over 100%)
    - Support for quality virtual signals
---------------------------------------------------------------------------------------------------
Version: 0.1.25
Date: 2024-01-16
  Changes:
    - Handle recycling of items with non-stackable ingredients
    - Setting for "no quality" items/groups/subgroups for simpler interoperability
  Bug fixes:
    - Extra quality bonus for underground pipe now supports weird underground pipes
    - Fixed handling of energy values without exponent
    - Fixed "main product" issue when handling normal/expensive recipes
  Compatibility:
    - Compatibility with Factorissimo2
---------------------------------------------------------------------------------------------------
Version: 0.1.24
Date: 2024-01-11
  Changes:
    - Extras are now not enabled by default
    - Module effect bonuses now work on non-vanilla modules
    - No quality on items with "only-in-cursor"
---------------------------------------------------------------------------------------------------
Version: 0.1.23
Date: 2023-12-12
  Changes: