@@ -8,6 +8,7 @@ jq-quality-no-quality-items=Items to disable quality for
 jq-quality-no-quality-groups=Groups to disable quality for
 jq-quality-no-quality-subgroups=Subgroups to disable quality for
 jq-delevel-to-normal=Delevel items to multiple normals
+jq-beacon-overlay=Enable beacon module quality overlay
 
 [mod-setting-description]
 jq-use-extra-bonuses=Enables several balanced quality bonuses that were not indicated in the quality FFF
@@ -19,6 +20,7 @@ jq-quality-no-quality-items=Names of items to disable quality for, separated by 
 jq-quality-no-quality-groups=Names of groups of items to disable quality for, separated by commas
 jq-quality-no-quality-subgroups=Names of subgroups of items to disable quality for, separated by commas
 jq-delevel-to-normal=When enabled, all items are deleveled to several normal items. When disabled, non-science pack lose just one level.
+jq-beacon-overlay=When enabled, a colorful overlay shows the quality of the modules placed in the beacon. Disable for compatibility mods that modify beacons.
 
 [jq]
 quality-1=Normal
