@@ -4,6 +4,7 @@ Date: ????
   Changes:
     - Ordered settings rather than random
     - Support for quality on friendly units
+    - Added setting for disabling beacon overlay
   Bug fixes
     - Support "no quality" on armors
     - Support "no quality" on quality enhancing buildings
